# web-search-mcp-server

./: README.md  __init__.py  agenticmarket_submission.md  glama.json  mcp-manifest.json  pyproject.toml  render.yaml  requirements.txt  server.py
crewai_web_search_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
mcp_billing/: README.md  __init__.py  pyproject.toml
web_search_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
