[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "web-search-mcp-server"
version = "1.0.0"
description = "MCP server providing web search and content extraction for AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "AI Business Crew", email = "ai-crew@example.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["mcp", "web-search"]
dependencies = ["mcp>=1.0.0", "httpx>=0.27.0"]

[project.urls]
Homepage = "https://github.com/KennyWayn3/web-search-mcp-server"
Repository = "https://github.com/KennyWayn3/web-search-mcp-server"

[project.scripts]
web-search-mcp-server = "web_search_mcp_server.server:app.run"

[tool.setuptools.packages.find]
where = ["."]
include = ["web_search_mcp_server*"]
