[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crewai-web-search-mcp"
version = "1.0.0"
description = "MCP server providing web search and content extraction for AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "AI Business Crew", email = "ai-crew@example.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["mcp", "web-search", "crewai"]
dependencies = ["mcp>=1.0.0", "httpx>=0.27.0"]

[project.urls]
Homepage = "https://github.com/KennyWayn3/crewai-web-search-mcp"
Repository = "https://github.com/KennyWayn3/crewai-web-search-mcp"

[project.scripts]
crewai-web-search-mcp = "crewai_web_search_mcp.server:app.run"

[tool.setuptools.packages.find]
where = ["."]
include = ["crewai_web_search_mcp*"]
